# CodeConductor

./: .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  1  AGENT_IMPROVEMENTS_README.md  CHANGELOG.md  CI_CD_README.md  CONTRIBUTING.md  DEMO_CHECKLIST.md  DEMO_GUIDE.md  DEMO_METRICS.md  DEMO_REHEARSAL_CHECKLIST.md  DEMO_SCRIPT.md  DEMO_SCRIPT_BALANCED.md  DEMO_TIMING_GUIDE.md  DEPLOYMENT.md  Dockerfile  FAS_11_PERFORMANCE_SUMMARY.md  GETTING_STARTED.md  GRAFANA_SETUP.md  GRAFANA_UPDATE_GUIDE.md  KICKOFF_GUIDE.md  LICENSE  MANUAL_TEST_GUIDE.md  MODEL_INSTALLATION_GUIDE.md  Makefile  PLUGIN_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_ROADMAP.md  README.md  RTX_5090_GPU_SHOWCASE.md  STATUS_REPORT.md  STATUS_REPORT_V2.md  add_metrics_to_gpu_service.py  add_task_debug.py  ai_stack_showcase.py  (+135 more)
.github/: README.md
3000/: diagnose_20250808_181737.txt  diagnose_20250808_185939.txt  diagnose_20250809_102549.txt
agents/: architect.py  architect_agent.py  base.py  base_agent.py  cached_llm_client.py  celery_agents.py  code_gen.py  codegen_agent.py  gpu_orchestrator.py  multi_step_orchestrator.py  orchestrator.py  orchestrator_distributed.py  orchestrator_simple.py  parallel_orchestrator.py  personas.yaml  policy_agent.py  prompt_optimizer.py  q_learning_agent.py  qlearning_agent.py  review_agent.py  reviewer.py  reward_agent.py  test_agent.py
ai-dashboard/: README.md  package-lock.json  package.json
analysis/: __init__.py  project_analyzer.py  tree_sitter_analyzer.py
analytics/: dashboard.py  ml_predictor.py
bandits/: __init__.py  linucb.py
bench/: performance_profiler.py  run_suite.py  simple_benchmark.py  stress_tester.py
cli/: __init__.py  human_approval.py
config/: base.yaml  config.yaml  config_loader.py  plugins.yaml  plugins_config.yaml  policies.yaml
context/: rag_system.py
dashboard/: __init__.py  app.py
data/: .gitkeep  approval_log.json  temp_architecture.md  temp_quality.md
docs/: README_TROUBLESHOOTING_LINKS.md  distributed_architecture.md  docker-hub-setup.md  getting_started.md  index.html  kubernetes-setup.md  observability-setup.md  workshop_guide.md
ensemble/: __init__.py  code_reviewer.py  consensus_calculator.py  demo_core.py  ensemble_engine.py  hybrid_ensemble.py  model_manager.py  query_dispatcher.py
examples/: cli_tool.py  simple_api.py  test_cli_tool_test.py
feedback/: feedback_controller.py  learning_system.py  validation_system.py
generators/: __init__.py  prompt_generator.py  simple_prompt_generator.py
improvements/: auth_api_enhanced.py  env_example.txt  requirements.txt  test_auth_api.py
integrations/: __init__.py  celery_app.py  clipboard_monitor.py  cloud_escalator.py  cursor_api.py  cursor_integration.py  cursor_local_api.py  github_webhook.py  hotkeys.py  human_gate.py  llm_client.py  lm_studio.py  model_manager.py  model_manager_simple.py  notifications.py  policy_loader.py
k8s/: agent-deployment.yaml  auth-deployment.yaml  configmaps.yaml  data-deployment.yaml  deploy-demo.sh  deploy.sh  gateway-deployment.yaml  namespace-demo.yaml  namespace.yaml  orchestrator-deployment.yaml  prepare-demo.sh  secrets-demo-final.yaml  secrets-demo.yaml  secrets.yaml
mocks/: __init__.py  cursor_cli.py
monitoring/: docker-compose.yml
plugins/: base.py  base_simple.py  code_formatter.py  formatter_plugin.py  security_agent.py  security_plugin.py
prompts/: agent_improved_prompts.md  calculator.md  fizzbuzz.md  hello_world.md  microservices.md  multi_file_template.md  security_audit.md  simple_api.md  simple_script.md
runners/: __init__.py  test_runner.py
scripts/: _cpu_guard_bootstrap.py  check_gpu_trigger.py  cleanup_repo.py  cleanup_runs.py  cpu_guard.pth  create_github_issues.py  debug_gpu_imports.py  diagnose_cursor.ps1  export_latest.py  generate_ensemble_run.py  prune_exports.py  run_all_tests.sh  run_benchmark_10.ps1  run_tests_clean.ps1  run_tests_safe.ps1  run_tests_safe.py  run_tests_safe.sh  run_tests_simple.ps1  run_tests_ultra_safe.ps1  smoke_real.ps1  smoke_real.sh  stream_smoke.py  tasks.ps1  test_dashboard.py  test_full_suite_safe.py  test_rag_safe.py  test_safe.py  test_simple.py  test_single_safe.py  ultra_block_gpu.py  warmup_prompts.txt  warmup_smoke.py
services/: PHASE_12_SUMMARY.md  README.md  check_data_endpoints.py  docker-compose.ci.yml  docker-compose.yml  init.sql  requirements.txt  smoke_test.py  start_services.sh  test_data_endpoints.py  test_full_stack.py  test_results.json  test_stack.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
src-tauri/src/: App.tsx  index.css  main.rs
src-tauri/src/components/: MonacoEditor.tsx
src-tauri/src/components/ui/: badge.tsx  button.tsx  card.tsx
storage/: rl_database.py
test_fastapi_project/: main.py
tests/: README.md  __init__.py  automated_test_suite_fixed.py  ci_personas_smoke.py  ci_quick_smoke.py  conftest.py  master_integration_test_simple.py  run_benchmarks.py  simple_agent_test.json  single_agent_simple_test.json  single_agent_simple_test.yaml  single_agent_test.yaml  test_2agents_expanded.py  test_agents.py  test_architect_agent.py  test_base_agent.py  test_breakers_selector.py  test_breakers_unit.py  test_cli_diag_cursor.py  test_codeconductor_2agents_focused.py  test_codeconductor_agents.py  test_codeconductor_comprehensive.py  test_codegen_agent.py  test_consensus_codebleu.py  test_cursor_integration.py  test_cursor_local_api.py  test_debate_final.py  test_debate_manager_contracts.py  test_debate_system.py  test_demo_proofs.py  test_direct_api.py  test_end_to_end_workflow.py  test_exporter.py  test_generated_latest.py  test_gpu_integration.py  test_gpu_mock_fix.py  test_gpu_toggle_example.py  test_hello.py  test_human_approval_cli.py  test_human_gate.py  (+47 more)
tutorials/: Quick_Start.md  README.md  Workshop_Guide.md
ui/: README.md  dashboard.py  debug_dashboard.py  simple_dashboard.py  simple_test.py  test_dashboard.py
utils/: __init__.py  export_utils.py  task_templates.py
(+188 files in other folders)
